--- a/courses.html
+++ b/courses.html
@@ -1,5 +1,6 @@
 <DOCTYPE HTML!>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
