--- a/softwareengineering.html
+++ b/softwareengineering.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <img src="logo.png" />
     <title> Course: Software Enginerering</title>
